feat: supporting parameters for the value Range annotated method (#1962)
The PR extends the solver model configuration by allowing value-range
annotated methods to accept the solution as a parameter.

```
    @ValueRangeProvider(id = "valueRange")
    public List<TestdataValue> getValueRange(TestdataEntityProvidingWithParameterSolution solution) {
        return valueRange;
    }
```